↔️ Fix card width to avoid ellipsis to overflow

--- a/web/details.css
+++ b/web/details.css
@@ -15,7 +15,7 @@
 
 .details-title {
     font-weight: 700;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
 }
 
 .details-info {
